// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`border prop 1`] = `
<div class="buri-cell buri-cell--center buri-cell--borderless buri-switch-cell">
  <div class="buri-cell__value buri-cell__value--alone">
    <div role="switch" aria-checked="false" class="buri-switch" style="font-size: 24px;">
      <div class="buri-switch__node"></div>
    </div>
  </div>
</div>
`;

exports[`cell-size prop 1`] = `
<div class="buri-cell buri-cell--center buri-cell--large buri-switch-cell buri-switch-cell--large">
  <div class="buri-cell__value buri-cell__value--alone">
    <div role="switch" aria-checked="false" class="buri-switch" style="font-size: 24px;">
      <div class="buri-switch__node"></div>
    </div>
  </div>
</div>
`;
